@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
@@ -35,7 +34,7 @@ class PathTreeVisit implements PathVisit {
     }
 
     static <T> T process(Path root, Path rootDir, Path path, PathFilter pathFilter, Function<PathVisit, T> func) {
-        final PathTreeVisit visit = new PathTreeVisit(root, rootDir, pathFilter, Collections.emptyMap());
+        final PathTreeVisit visit = new PathTreeVisit(root, rootDir, pathFilter, Map.of());
         if (visit.setCurrent(path)) {
             return func.apply(visit);
         }
@@ -43,7 +42,7 @@ class PathTreeVisit implements PathVisit {
     }
 
     static void consume(Path root, Path rootDir, Path path, PathFilter pathFilter, Consumer<PathVisit> func) {
-        final PathTreeVisit visit = new PathTreeVisit(root, rootDir, pathFilter, Collections.emptyMap());
+        final PathTreeVisit visit = new PathTreeVisit(root, rootDir, pathFilter, Map.of());
         if (visit.setCurrent(path)) {
             func.accept(visit);
         } else {
@@ -64,7 +63,7 @@ class PathTreeVisit implements PathVisit {
         this.root = root;
         this.baseDir = rootDir;
         this.pathFilter = pathFilter;
-        this.multiReleaseMapping = multiReleaseMapping == null || multiReleaseMapping.isEmpty() ? Collections.emptyMap()
+        this.multiReleaseMapping = multiReleaseMapping == null || multiReleaseMapping.isEmpty() ? Map.of()
                 : new HashMap<>(multiReleaseMapping);
     }
 
